fix increase z-index of site header to make shadow visible

--- a/assets/css/frontend/objects/site-header.css
+++ b/assets/css/frontend/objects/site-header.css
@@ -1,3 +1,5 @@
 .site-header {
 	box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.15);
+	position: relative;
+	z-index: 50;
 }
